# data-invest-sense

./: Makefile  docker-compose.yml  go.work  go.work.sum  migrations.json  mkdocs.yml  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/ingestors/file-downloader/: Dockerfile  project.json  pyproject.toml
apps/ingestors/file-downloader/file_downloader/: main.py
apps/ingestors/file-downloader/file_downloader/consumer/: consumer.py
apps/ingestors/file-downloader/file_downloader/controller/: controller.py
apps/ingestors/file-downloader/file_downloader/jobs/: job_handler.py
apps/ingestors/file-downloader/file_downloader/jobs/handlers/zip_handler/: job.py
apps/ingestors/file-unzipper/: project.json
apps/ingestors/file-unzipper/internal/usecase/: unzip_file.go
apps/lake-governance/jobs-lineage/: go.mod  project.json
apps/lake-governance/lake-catalog/: go.mod  project.json
apps/lake-governance/lake-catalog/cmd/server/: main.go  wire.go  wire_gen.go
apps/lake-governance/lake-catalog/internal/entity/: interface.go  schema_catalog.go  schema_catalog_test.go
apps/lake-governance/lake-catalog/internal/usecase/: create_schema_catalog.go  list_all_schema_catatlog.go  list_all_schema_catatlog_by_servvice.go  list_one_schema_catalog_by_id.go  list_one_schema_catalog_by_service_and_source.go
apps/lake-governance/lake-catalog/test/: schema-catalog.http
apps/lake-governance/treatment/domain-registry/: go.mod  main.go  project.json
apps/lake-orchestration/lake-controller/: README.md  project.json
apps/lake-orchestration/lake-controller/docs/openapi/: openapi.json  swagger.yaml
apps/lake-orchestration/lake-controller/test/: config.http
apps/lake-orchestration/lake-events/internal/usecase/: create_service_output.go
apps/lake-orchestration/lake-gateway/: README.md  project.json
apps/lake-orchestration/lake-gateway/cmd/server/: main.go
apps/lake-orchestration/lake-gateway/docs/openapi/: openapi.json  swagger.yaml
apps/lake-orchestration/lake-gateway/test/: input.http
apps/lake-orchestration/lake-outputs/: README.md  go.mod  go.sum  project.json
apps/lake-orchestration/lake-outputs/cmd/server/: main.go  wire.go  wire_gen.go
apps/lake-orchestration/lake-outputs/docs/openapi/: openapi.json  swagger.yaml
apps/lake-orchestration/lake-outputs/internal/entity/: interface.go  service_output.go  service_output_test.go
apps/lake-orchestration/lake-outputs/internal/usecase/: create_service_output.go  list_all_service_output_by_service.go  list_all_service_output_by_service_and_source.go  list_one_service_output_by_service_and_id.go
apps/lake-orchestration/lake-outputs/test/: service-output.http
apps/lake-orchestration/lake-repository/: README.md  project.json
apps/lake-orchestration/lake-repository/cmd/server/: main.go
apps/lake-orchestration/lake-repository/docs/openapi/: openapi.json  swagger.yaml
apps/lake-orchestration/lake-repository/internal/entity/: interface.go
apps/lake-orchestration/lake-repository/internal/usecase/: create_schema.go  list_one_schema_by_service_source_and_schema_type.go
apps/lake-orchestration/lake-repository/test/: schema.http
apps/products/back-end/admin-videos-catalog/: Dockerfile  jest.config.ts  project.json
apps/products/back-end/admin-videos-catalog-e2e/: jest.config.ts  project.json
apps/products/back-end/admin-videos-catalog/src/: main.ts
apps/products/front-end/midiaflix/: jest.config.ts  project.json  tsconfig.spec.json
apps/products/front-end/midiaflix-e2e/: project.json
apps/products/front-end/midiaflix/src/: index.html  main.tsx
apps/transformers/spark-batch/: Dockerfile  project.json  pyproject.toml
apps/transformers/spark-batch/spark_batch/: main.py
apps/transformers/spark-batch/spark_batch/consumer/: consumer.py
apps/transformers/spark-batch/spark_batch/controller/: controller.py
apps/transformers/spark-batch/spark_batch/events/: parser.py
apps/transformers/spark-batch/spark_batch/jobs/: job_handler.py
docs/: gen_doc_stubs.py
docs/dependency-graph/static/: environment.js
libs/api-client/golang/go-gateway/: client.go
libs/api-client/golang/go-outputs/: client.go  go.mod  project.json
libs/api-client/python/py-controller/: pyproject.toml
libs/api-client/python/py-controller/pycontroller/: client.py
libs/api-client/python/py-lake-catalog/: README.md  project.json  pyproject.toml
libs/api-client/python/py-lake-catalog/pylakecatalog/: client.py
libs/api-client/python/py-repository/: README.md  project.json  pyproject.toml
libs/dtos/golang/dto-events/output/: dto.go
libs/dtos/golang/dto-jobs-lineage/: dtos-golang-dto-jobs-lineage.go  dtos-golang-dto-jobs-lineage_test.go  go.mod  project.json
libs/dtos/golang/dto-lake-catalog/: go.mod  project.json
libs/dtos/golang/dto-lake-outputs/: dtos-golang-dto-lake-outputs.go  dtos-golang-dto-lake-outputs_test.go  go.mod  project.json
libs/dtos/golang/dto-treatment-domain-registry/: dtos-golang-dto-treatment-domain-registry.go  dtos-golang-dto-treatment-domain-registry_test.go  go.mod  project.json
libs/dtos/python/dto-controller/: README.md  project.json  pyproject.toml
libs/dtos/python/dto-events/: README.md  project.json  pyproject.toml
libs/dtos/python/dto-gateway/: README.md  project.json  pyproject.toml
libs/dtos/python/dto-lake-catalog/: README.md  project.json  pyproject.toml
libs/dtos/python/dto-repository/: README.md  project.json  pyproject.toml
libs/dtos/python/serializer/: .coverage  README.md  project.json  pyproject.toml
libs/node-services/: expect-helpers.ts  jest.d.ts
libs/python/pylog/pylog/: log.py
libs/python/pysd/pysd/: service_discovery.py
libs/react-modules/shared/hooks/: README.md  jest.config.ts  project.json
libs/react-modules/shared/store/: README.md  jest.config.ts  project.json
libs/react-modules/shared/ui-components/: README.md  jest.config.ts  project.json
libs/service-setup/python/config-loader/: README.md  project.json  pyproject.toml
libs/service-setup/python/input-serializer/: .coverage  README.md  project.json  pyproject.toml
(+226 files in other folders)
