[tool.poetry]
name = "data-invest-sense"
version = "0.1.0"
description = ""
authors = [ "FabioCaffarello <fabio.caffarello@gmail.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = "3.10.11"

    [tool.poetry.dependencies.file_downloader]
    path = "apps/ingestors/file-downloader"
    develop = true

    [tool.poetry.dependencies.pylog]
    path = "libs/python/pylog"
    develop = true

    [tool.poetry.dependencies.pydotenv]
    path = "libs/python/pydotenv"
    develop = true

    [tool.poetry.dependencies.core]
    path = "libs/python/core"
    develop = true

    [tool.poetry.dependencies.pyrabbitmq]
    path = "libs/python/pyrabbitmq"
    develop = true

    [tool.poetry.dependencies.pysd]
    path = "libs/python/pysd"
    develop = true

    [tool.poetry.dependencies.py-controller]
    path = "libs/api-client/python/py-controller"
    develop = true

    [tool.poetry.dependencies.py-request]
    path = "libs/python/pyrequest"
    develop = true

    [tool.poetry.dependencies.py-minio]
    path = "libs/storage-client/python/py-minio"
    develop = true

    [tool.poetry.dependencies.py-youtube]
    path = "libs/api-client/python/py-youtube"
    develop = true

    [tool.poetry.dependencies.spark-batch]
    path = "apps/transformers/spark-batch"
    develop = true

    [tool.poetry.dependencies.dto-controller]
    path = "libs/dtos/python/dto-controller"
    develop = true

    [tool.poetry.dependencies.config-loader]
    path = "libs/service-setup/python/config-loader"
    develop = true

    [tool.poetry.dependencies.py-lake-catalog]
    path = "libs/api-client/python/py-lake-catalog"
    develop = true

    [tool.poetry.dependencies.dto-lake-catalog]
    path = "libs/dtos/python/dto-lake-catalog"
    develop = true

    [tool.poetry.dependencies.dto-serializer]
    path = "libs/dtos/python/serializer"
    develop = true

    [tool.poetry.dependencies.input-serializer]
    path = "libs/service-setup/python/input-serializer"
    develop = true

    [tool.poetry.dependencies.py-repository]
    path = "libs/api-client/python/py-repository"
    develop = true

    [tool.poetry.dependencies.dto-repository]
    path = "libs/dtos/python/dto-repository"
    develop = true

    [tool.poetry.dependencies.dto-events]
    path = "libs/dtos/python/dto-events"
    develop = true

    [tool.poetry.dependencies.dto-gateway]
    path = "libs/dtos/python/dto-gateway"
    develop = true

    [tool.poetry.dependencies.encoding-normalizer]
    path = "libs/transformers/domains/common/python/text-rules/formating/encoding-normalizer"
    develop = true

    [tool.poetry.dependencies.rename]
    path = "libs/transformers/domains/common/python/text-rules/formating/rename"
    develop = true

    [tool.poetry.dependencies.dmn-rename-camelcase]
    path = "libs/transformers/domains/python/text-domains/dmn-rename-camelcase"
    develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.1"
mkdocs-material-extensions = "^1.2"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-include-markdown-plugin = "^6.0.1"
mkdocs-swagger-ui-tag = "^0.6.5"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
